Bug 690208 - Wavy lines disappear after re-distilling.
Summary: Wavy lines disappear after re-distilling.
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Writer (show other bugs)
Version: master
Hardware: PC Windows NT
: P4 normal
Assignee: Ken Sharp
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-19 12:22 UTC by Alex Cherepanov
Modified: 2009-10-26 05:48 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments
Sample PDF file (317.38 KB, application/pdf)
2008-12-19 12:30 UTC, Alex Cherepanov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Cherepanov 2008-12-19 12:22:48 UTC
The wavy lines on top of every page disappear when the file is
re-distilled as: ps2pdf src.pdf dst.pdf
Comment 1 Alex Cherepanov 2008-12-19 12:30:02 UTC
Created attachment 4664 [details]
Sample PDF file
Comment 2 Ken Sharp 2009-01-19 05:50:10 UTC
For me the HEAD revision of GS is unable to correctly render the 'missing'
portions of the job. Simply executing gswin32 results in those portions being
rendered black. I also tried tiffsep in order to see each plate, and each plate
is rendered incorrectly by comparison with Acrobat.

I'm unsure where the problem truly lies, the job is fairly complex, including
forms patterns and shading dictionaries, and the entire page is in a
transparency group, so it may be a transparency problem. Michael, could you try
this on the latest code in your branch please, and see if it renders correctly
there ?

From the PDF output it appears that some pattern colour spaces are being
rendered as 0 0 0 RGB which is pretty clearly incorrect and (taking transparency
into account) may be the whole of the problem.

These are Shading patterns in the original PDF file, and these shading
dictionaries *are* defined in the pdfwrite otuput, but they are never used, and
no pattern spaces are defined for them. I have a sneaky suspicion that the same
is happening when rendering, and its probably related to transparency. This
being the case, fixing the rendering might well make the pdfwrite output correct
as well.
Comment 3 Ken Sharp 2009-10-26 05:48:09 UTC
Retested with HEAD revision, and this file now works correctly for me. I believe
that this has been fixed somewhere in the extensive work done by Michael on
transparency.